--- a/public/assets/plugins/sweetalert/sweetalert.css
+++ b/public/assets/plugins/sweetalert/sweetalert.css
@@ -3,11 +3,10 @@ body.stop-scrolling {
   overflow: hidden; }
 
 .sweet-overlay {
-  background-color: black;
+  background-color: rgba(161, 157, 163, 0.48);
   /* IE8 */
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
   /* IE8 */
-  background-color: rgba(0, 0, 0, 0.4);
   position: fixed;
   left: 0;
   right: 0;
@@ -17,11 +16,15 @@ body.stop-scrolling {
   z-index: 10000; }
 
 .sweet-alert {
+
+  border-radius: 5px;
+  box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.15);
+
   background-color: white;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-weight: 700;
+  font-family: Rubik, sans-serif;
   width: 478px;
   padding: 17px;
-  border-radius: 5px;
   text-align: center;
   position: fixed;
   left: 50%;
@@ -178,7 +181,8 @@ body.stop-scrolling {
     font-weight: 500;
     -webkit-border-radius: 4px;
     border-radius: 5px;
-    padding: 10px 32px;
+    padding: 10px 2px;
+    width: 100px;
     margin: 26px 5px 0 5px;
     cursor: pointer; }
     .sweet-alert button:focus {
@@ -189,9 +193,10 @@ body.stop-scrolling {
     .sweet-alert button:active {
       background-color: #5dc2f1; }
     .sweet-alert button.cancel {
-      background-color: #C1C1C1; }
+      background-color: rgba(242, 242, 242, 0.86); color: rgba(0, 0, 0, 0.58)
+    }
       .sweet-alert button.cancel:hover {
-        background-color: #b9b9b9; }
+        background-color: rgba(230, 230, 230, 0.86); color: rgba(0, 0, 0, 0.58) }
       .sweet-alert button.cancel:active {
         background-color: #a8a8a8; }
       .sweet-alert button.cancel:focus {
